Changed portfolio to CV

--- a/index.html
+++ b/index.html
@@ -1,44 +1,96 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>My Resume</title>
 </head>
-
 <body>
-    <h1>My Portfolio</h1>
-    <h2>El más pro del web-dev</h2>
-    <hr/>
+    <!-- This is a comment.--> 
+    <h1>Álvaro Núñez Vázquez</h1>
+    <img src="./assets/images/20200626 Foto.png" height="200" alt="A picture of me. I'm beautiful">
 
-    <a href="./public/movie-ranking.html">
-        <h3>Movie Ranking Project</h3>
-        <img src="./assets/images/movie_ranking.png" height="200"/>
-    </a>
-
-    <a href="./public/birthday-invite.html">
-        <h3>Birthday Invite</h3>
-        <img src="./assets/images/birthday_invite.png" height="200"/>
-    </a>
-
+    <h2>Profile</h2>
+    <p>I am passionate about data science, machine learning, and science in general. 
+        I enjoy problem-solving and I love learning. I consider myself a hard worker and a 
+        fast learner.</p>
     <hr />
-    <p><a href="./public/about.html">About me</a></p>
-    <p><a href="./public/contact.html">Contact info</a></p>
 
+    <h2>Work Experience</h2>
+    <ul>
+        <li>
+            <h3>Machine Learning Engineer</h3>
+            <p>GMV Aerospace and Defense, Spain. June 2023 - PRESENT</p>
+            <ul>
+                <li>Implemented State of the Art Data Fusion algorithms for the european
+                    FCAS program
+                </li>
+            </ul>         
+        </li>
+        <li>
+            <h3>Research Collaboration Scholarship</h3>
+            <p>University of Extremadura (UEx), Spain. September 2021 - June 2022</p>
+            <ul>
+                <li>Project: Monitorization of contrail-type anthropogenic clouds through
+                    sky photography.</li>
+                <li>I developed a Machine Learning pipeline to automatically classify
+                    sky camera images</li>
+            </ul>
+        </li>
+    </ul>
+
+    <h2>Education</h2>
+    <ul>
+        <li>
+            <h3>Master in Big Data Analytics</h3>
+            <p>University Carlos III of Madrid, Spain. 2022 - 2023</p>
+    
+        </li>
+        <li>
+            <h3>Degree in Physics</h3>
+            <p>University of Extremadura (UEx), Spain. 2018 - 2022</p>
+            <ul>
+                <li><b>Highest Ranked Student</b> of the class of 2022</li>
+                <li>Average Grade: <b>8.945</b></li>
+            </ul>
+        </li>
+        <li>
+            <h3>Erasmus+ Mobility Programme</h3>
+            <p>University of Zielona Gora, Poland. 2020 - 2021</p>
+            <ul>
+                <li>Relevant Elective classes taken: Object Oriented Programming
+                    and Modelling phenomena in nature </li>
+            </ul>
+        </li>
+    </ul>
+
+    <h2>Skills</h2>
+    <ul>
+        <li>Python (With experience in OOP), R, C++ and Fortran</li>
+        <li>Extensive experience working with Data Fusion Algorithms and the stonesoup python library</li>
+        <li>SQL, MongoDB and SPARQL</li>
+        <li>Linux</li>
+        <li>LaTeX, Markdown and MS-Office</li>
+        <li>Experience in High-Performance Computing</li>
+        <li>Git version control</li>
+        <li>English (C2 level), Spanish (Native) and German (A1)</li>
+        <li>Certified Full-stack Developer</li>
+    </ul>
+
+    <h2>Honours and Awards</h2>
+    <ul>
+        <li>Highest Ranked Student in the faculty of Science (UEx)</li>
+        <li>Highest Ranked Student in Physics (UEx)</li>
+        <li>Best Undergraduate Thesis in Physics (UEx)</li>
+        <li>Collaboration Scholarship in the Department of Physics (UEx)</li>
+    </ul>
+
+    <h2>Other Info</h2>
+    <p><a href="./public/contact.html">Contact Info</a></p>
+    <p><a href="./public/portfolio.html">Web Development Portfolio</a></p>
+
+    <footer>
+        Copyright Álvaro Núñez Vázquez. 2024
+    </footer>
 </body>
 </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
