--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +34 644978757</p>
+<p>Email: amunezvazquez@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Calle de Ilustración 19, 3º Derecha<br />
+  28008 Madrid<br />
+  Badajoz <br />
 </p>
