--- a/index.html
+++ b/index.html
@@ -3,96 +3,153 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <title>My Personal Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-    <!-- This is a comment.--> 
-    <h1>Álvaro Núñez Vázquez</h1>
-    <img src="./assets/images/20200626 Foto.png" height="200" alt="A picture of me. I'm beautiful">
 
-    <h2>Profile</h2>
-    <p>I am passionate about data science, machine learning, and science in general. 
-        I enjoy problem-solving and I love learning. I consider myself a hard worker and a 
-        fast learner.</p>
-    <hr />
 
-    <h2>Work Experience</h2>
-    <ul>
-        <li>
-            <h3>Machine Learning Engineer</h3>
-            <p>GMV Aerospace and Defense, Spain. June 2023 - PRESENT</p>
-            <ul>
-                <li>Implemented State of the Art Data Fusion algorithms for the european
-                    FCAS program
-                </li>
-            </ul>         
-        </li>
-        <li>
-            <h3>Research Collaboration Scholarship</h3>
-            <p>University of Extremadura (UEx), Spain. September 2021 - June 2022</p>
-            <ul>
-                <li>Project: Monitorization of contrail-type anthropogenic clouds through
-                    sky photography.</li>
-                <li>I developed a Machine Learning pipeline to automatically classify
-                    sky camera images</li>
-            </ul>
-        </li>
-    </ul>
+    <!-- IMAGE BANNER  ??-->
 
-    <h2>Education</h2>
-    <ul>
-        <li>
-            <h3>Master in Big Data Analytics</h3>
-            <p>University Carlos III of Madrid, Spain. 2022 - 2023</p>
+    <!-- <div class="p-5 text-center bg-body-tertiary main-banner">
+        <div class="container py-5">
+          <h1 class="text-body-emphasis">Welcome to Álvaro Núñez's personal website</h1>
+
+        </div>
+      </div> -->
+
+    <!-- HERO BANNER -->
+
+    <div class="px-4 py-5 mb-5 text-center profile-banner">
+        <img class="d-block mx-auto mb-4 profile_pic" src="./images/20200626 Foto.png" alt="" width="200">
+        <h2 class="display-5 fw-bold text-body-emphasis">Hi! I'm Álvaro Núñez</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">I'm a physicist, programmer, and web developer</p>
+        </div>
+      </div>
+
+    <!-- CV  -->
+
+    <div class="container px-4 py-5" id="hanging-icons">
+        <h2 class="pb-2 border-bottom section-title">My Skills</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-rocket-takeoff" viewBox="0 0 16 16">
+                    <path d="M9.752 6.193c.599.6 1.73.437 2.528-.362s.96-1.932.362-2.531c-.599-.6-1.73-.438-2.528.361-.798.8-.96 1.933-.362 2.532"/>
+                    <path d="M15.811 3.312c-.363 1.534-1.334 3.626-3.64 6.218l-.24 2.408a2.56 2.56 0 0 1-.732 1.526L8.817 15.85a.51.51 0 0 1-.867-.434l.27-1.899c.04-.28-.013-.593-.131-.956a9 9 0 0 0-.249-.657l-.082-.202c-.815-.197-1.578-.662-2.191-1.277-.614-.615-1.079-1.379-1.275-2.195l-.203-.083a10 10 0 0 0-.655-.248c-.363-.119-.675-.172-.955-.132l-1.896.27A.51.51 0 0 1 .15 7.17l2.382-2.386c.41-.41.947-.67 1.524-.734h.006l2.4-.238C9.005 1.55 11.087.582 12.623.208c.89-.217 1.59-.232 2.08-.188.244.023.435.06.57.093q.1.026.16.045c.184.06.279.13.351.295l.029.073a3.5 3.5 0 0 1 .157.721c.055.485.051 1.178-.159 2.065m-4.828 7.475.04-.04-.107 1.081a1.54 1.54 0 0 1-.44.913l-1.298 1.3.054-.38c.072-.506-.034-.993-.172-1.418a9 9 0 0 0-.164-.45c.738-.065 1.462-.38 2.087-1.006M5.205 5c-.625.626-.94 1.351-1.004 2.09a9 9 0 0 0-.45-.164c-.424-.138-.91-.244-1.416-.172l-.38.054 1.3-1.3c.245-.246.566-.401.91-.44l1.08-.107zm9.406-3.961c-.38-.034-.967-.027-1.746.163-1.558.38-3.917 1.496-6.937 4.521-.62.62-.799 1.34-.687 2.051.107.676.483 1.362 1.048 1.928.564.565 1.25.941 1.924 1.049.71.112 1.429-.067 2.048-.688 3.079-3.083 4.192-5.444 4.556-6.987.183-.771.18-1.345.138-1.713a3 3 0 0 0-.045-.283 3 3 0 0 0-.3-.041Z"/>
+                    <path d="M7.009 12.139a7.6 7.6 0 0 1-1.804-1.352A7.6 7.6 0 0 1 3.794 8.86c-1.102.992-1.965 5.054-1.839 5.18.125.126 3.936-.896 5.054-1.902Z"/>
+                  </svg>
+            </div>
+            <div>
+              <h3 class="fs-3 header">Programming</h3>
+              <p>I know Python, R, C++ and Fortran. Lots of experience working with State of the Art Data Fusion algorithms, especially with python's stonesoup library.</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-cpu" viewBox="0 0 16 16">
+                    <path d="M5 0a.5.5 0 0 1 .5.5V2h1V.5a.5.5 0 0 1 1 0V2h1V.5a.5.5 0 0 1 1 0V2h1V.5a.5.5 0 0 1 1 0V2A2.5 2.5 0 0 1 14 4.5h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14a2.5 2.5 0 0 1-2.5 2.5v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14A2.5 2.5 0 0 1 2 11.5H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2A2.5 2.5 0 0 1 4.5 2V.5A.5.5 0 0 1 5 0m-.5 3A1.5 1.5 0 0 0 3 4.5v7A1.5 1.5 0 0 0 4.5 13h7a1.5 1.5 0 0 0 1.5-1.5v-7A1.5 1.5 0 0 0 11.5 3zM5 6.5A1.5 1.5 0 0 1 6.5 5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5zM6.5 6a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5z"/>
+                  </svg>
+            </div>
+            <div>
+              <h3 class="fs-3 header">Back-end Development</h3>
+              <p>I am experienced with SQL, MongoDB, Docker and Kubernetes.</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-window-fullscreen" viewBox="0 0 16 16">
+                    <path d="M3 3.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0m1.5 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0m1 .5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1"/>
+                    <path d="M.5 1a.5.5 0 0 0-.5.5v13a.5.5 0 0 0 .5.5h15a.5.5 0 0 0 .5-.5v-13a.5.5 0 0 0-.5-.5zM1 5V2h14v3zm0 1h14v8H1z"/>
+                  </svg>
+            </div>
+            <div>
+              <h3 class="fs-3 header">Front-end Development</h3>
+              <p>I made this website! For more examples of my work, check the following section.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    <!-- PORTFOLIO -->
+
     
-        </li>
-        <li>
-            <h3>Degree in Physics</h3>
-            <p>University of Extremadura (UEx), Spain. 2018 - 2022</p>
-            <ul>
-                <li><b>Highest Ranked Student</b> of the class of 2022</li>
-                <li>Average Grade: <b>8.945</b></li>
-            </ul>
-        </li>
-        <li>
-            <h3>Erasmus+ Mobility Programme</h3>
-            <p>University of Zielona Gora, Poland. 2020 - 2021</p>
-            <ul>
-                <li>Relevant Elective classes taken: Object Oriented Programming
-                    and Modelling phenomena in nature </li>
-            </ul>
-        </li>
-    </ul>
+    <div class="container ">
+      <h2 class="pb-2 border-bottom section-title ">Some Projects I have worked on</h2>
+      <div class="carousel-container mt-5" data-bs-theme="dark">
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators" data-bs-theme="light">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <!-- <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button> -->
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <a href="./public/moveit.html"><img src="./images/MoveIt.png" class="d-block w-100" alt="..."></a>
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Move It</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a href="./public/tindog.html"><img src="./images/TinDog.png" class="d-block w-100" alt="..."></a>
+              <div class="carousel-caption d-none d-md-block">
+                <h5>TinDog</h5>
+              </div>
+            </div>
+            <!-- <div class="carousel-item">
+              <img src="..." class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div> -->
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
 
-    <h2>Skills</h2>
-    <ul>
-        <li>Python (With experience in OOP), R, C++ and Fortran</li>
-        <li>Extensive experience working with Data Fusion Algorithms and the stonesoup python library</li>
-        <li>SQL, MongoDB and SPARQL</li>
-        <li>Linux</li>
-        <li>LaTeX, Markdown and MS-Office</li>
-        <li>Experience in High-Performance Computing</li>
-        <li>Git version control</li>
-        <li>English (C2 level), Spanish (Native) and German (A1)</li>
-        <li>Certified Full-stack Developer</li>
-    </ul>
+    <!-- Contact -->
 
-    <h2>Honours and Awards</h2>
-    <ul>
-        <li>Highest Ranked Student in the faculty of Science (UEx)</li>
-        <li>Highest Ranked Student in Physics (UEx)</li>
-        <li>Best Undergraduate Thesis in Physics (UEx)</li>
-        <li>Collaboration Scholarship in the Department of Physics (UEx)</li>
-    </ul>
+    <div class="container ">
+      <h2 class="py-2 mb-4 pt-5 border-bottom section-title ">Contact Me</h2>
+      <h3 class="fs-5 contact-text">If you have any business inquiry, click the button below to send me an email</h3>
+      <div class="row my-5 mx-5">
+        <a type="button" class="btn btn-primary" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Contact me</a>
+      </div>   
+    </div>
 
-    <hr />
 
-    <h2>Other Info</h2>
-    <p><a href="./public/contact.html">Contact Info</a></p>
-    <p><a href="./public/portfolio.html">Web Development Portfolio</a></p>
-
-    <footer>
-        Copyright Álvaro Núñez Vázquez. 2024
+    <!-- Footer -->
+  
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Álvaro Núñez</span>
+      </div>
+  
+      <!-- <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+      </ul> -->
     </footer>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
