--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     <div class="container ">
       <h2 class="py-2 mb-4 pt-5 border-bottom section-title ">Contact Me</h2>
       <h3 class="fs-5 contact-text">If you have any business inquiry, click the button below to send me an email</h3>
-      <div class="row my-5 mx-5">
-        <a type="button" class="btn btn-primary" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Contact me</a>
+      <div class="button-container my-5">
+        <a type="button" class="btn btn-primary contact-btn" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Contact me</a>
       </div>   
     </div>
 
@@ -136,7 +136,7 @@
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
         <a class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+          <!-- <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg> -->
         </a>
         <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Álvaro Núñez</span>
       </div>
