--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="carousel-indicators" data-bs-theme="light">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <!-- <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button> -->
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -100,13 +100,13 @@
                 <h5>TinDog</h5>
               </div>
             </div>
-            <!-- <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
+            <div class="carousel-item">
+              <a href="http://192.168.1.140:3000/"><img src="./images/the_open_library.png" class="d-block w-100" alt="..."></a>
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
               </div>
-            </div> -->
+            </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
