--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <a href="./public/moveit.html"><img src="./images/MoveIt.png" class="d-block w-100" alt="..."></a>
-              <div class="carousel-caption d-none d-md-block">
+              <!-- <div class="carousel-caption d-none d-md-block">
                 <h5>Move It</h5>
-              </div>
+              </div> -->
             </div>
             <div class="carousel-item">
               <a href="./public/tindog.html"><img src="./images/TinDog.png" class="d-block w-100" alt="..."></a>
-              <div class="carousel-caption d-none d-md-block">
+              <!-- <div class="carousel-caption d-none d-md-block">
                 <h5>TinDog</h5>
-              </div>
+              </div> -->
             </div>
             <div class="carousel-item">
               <a href="http://192.168.1.140:3000/"><img src="./images/the_open_library.png" class="d-block w-100" alt="..."></a>
-              <div class="carousel-caption d-none d-md-block">
+              <!-- <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
-              </div>
+              </div> -->
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" >
